Correct spelling in README.

--- a/README.rdoc
+++ b/README.rdoc
@@ -38,8 +38,8 @@ The following methods are available to your bot:
   x                   #your x coordinate, 0...battlefield_width
   y                   #your y coordinate, 0...battlefield_height
   accelerate(param)   #accelerate (max speed is 8, max accelerate is 1/-1,
-                      #negativ speed means moving backwards)
-  stop                #accelerates negativ if moving forward (and vice versa),
+                      #negative speed means moving backwards)
+  stop                #accelerates negative if moving forward (and vice versa),
                       #may take 8 ticks to stop (and you have to call it every tick)
   fire(power)         #fires a bullet in the direction of your gun,
                       #power is 0.1 - 3, this power will heat your gun
